<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#232222"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Two">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:weightSum="7">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="WELCOME"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Create your account ."
            android:textColor="#948F8A"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"/>
        <EditText
            android:id="@+id/newEmailScreenTwo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Email Address"
            android:textColorHint="#948F8A"
            android:backgroundTint="#948F8A"
            android:textColor="#948F8A"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/newPasswordScreenTwo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Password"
            android:textColorHint="#948F8A"
            android:backgroundTint="#948F8A"
            android:textColor="#948F8A"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/newcPasswordScreenTwo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Confirm Password"
            android:textColorHint="#948F8A"
            android:backgroundTint="#948F8A"
            android:textColor="#948F8A"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/signUpScreenTwo"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Sign Up"
            android:background="@drawable/my_button_shape"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/logInScreenTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity=""
                android:text="LOGIN"
                android:textSize="15sp"
                android:textColor="#FFFFFF"/>
        </LinearLayout>



    </LinearLayout>

</LinearLayout>